fix: improve filters readability.

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ a:focus, select:focus {
   flex: unset;
 }
 .fieldKey {
-  font-size: 1.5em;
+  font-size: 1.25em;
   display:  block;
 }
 #maincontent {
@@ -164,7 +164,6 @@ nav h1 a {
   font-size: 1.5rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
 }
 .filter-options select {
   background-color: white;
